adopt model changes